[gd_scene load_steps=5 format=3 uid="uid://c5s8j2f3n3j2s"]

[ext_resource type="Script" uid="uid://c183x5ewdo6dj" path="res://editor/editor.gd" id="1_ff1g8"]
[ext_resource type="Theme" uid="uid://dvj2wa25413ak" path="res://editor/WindTempoTheme.tres" id="2_fjngd"]

[sub_resource type="Theme" id="Theme_ycap1"]

[sub_resource type="Theme" id="Theme_fjngd"]

[node name="Editor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ff1g8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_fjngd")

[node name="LoadAudioButton" type="Button" parent="VBoxContainer/MenuBar"]
layout_mode = 2
theme = ExtResource("2_fjngd")
text = "Load Audio"

[node name="LoadTrackButton" type="Button" parent="VBoxContainer/MenuBar"]
layout_mode = 2
text = "Load Track"

[node name="SaveTrackButton" type="Button" parent="VBoxContainer/MenuBar"]
layout_mode = 2
text = "Save Track"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Metadata" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="VBoxContainer/Metadata"]
layout_mode = 2
text = "Title: "

[node name="TitleEdit" type="LineEdit" parent="VBoxContainer/Metadata"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Song Title"

[node name="LabelArtist" type="Label" parent="VBoxContainer/Metadata"]
layout_mode = 2
text = "Artist: "

[node name="ArtistEdit" type="LineEdit" parent="VBoxContainer/Metadata"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Artist Name"

[node name="LabelBPM" type="Label" parent="VBoxContainer/Metadata"]
layout_mode = 2
text = "BPM: "

[node name="BPMEdit" type="LineEdit" parent="VBoxContainer/Metadata"]
layout_mode = 2
placeholder_text = "120"

[node name="Playback" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer/Playback"]
layout_mode = 2
theme = SubResource("Theme_ycap1")
text = "Play"

[node name="PauseButton" type="Button" parent="VBoxContainer/Playback"]
layout_mode = 2
text = "Pause"

[node name="TimelineSlider" type="HSlider" parent="VBoxContainer/Playback"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TimelineContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="Timeline" type="Control" parent="VBoxContainer/TimelineContainer"]
custom_minimum_size = Vector2(0, 20000)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource("Theme_fjngd")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.ogg ; Ogg Vorbis")
